// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationSettings View has an enabled save button 1`] = `
<Base
  paddingVertical="x8"
>
  <Text
    size="x5"
    weight="bold"
  >
    Email Notifications
  </Text>
  <Divider
    color="gray-2"
    direction="horizontal"
    margin="x4"
    width="0.125rem"
  />
  <Base
    margin="x6"
  >
    <_default
      onAddEmail={[MockFunction]}
    />
  </Base>
  <Base
    margin="x4"
  >
    <_default
      appContacts={Array []}
      onDeleteContact={[MockFunction]}
      onNotificationPreferenceChanged={[MockFunction]}
    />
  </Base>
  <Flex
    alignChildrenHorizontal="end"
    direction="horizontal"
    gap="x4"
    margin="x12"
  >
    <Button
      level="secondary"
      onClick={[MockFunction]}
      size="medium"
      width="8rem"
    >
      Cancel
    </Button>
    <Button
      disabled={false}
      level="primary"
      onClick={[MockFunction]}
      size="medium"
      width="8rem"
    >
      Save
    </Button>
  </Flex>
</Base>
`;

exports[`NotificationSettings View renders correctly 1`] = `
<Base
  paddingVertical="x8"
>
  <Text
    size="x5"
    weight="bold"
  >
    Email Notifications
  </Text>
  <Divider
    color="gray-2"
    direction="horizontal"
    margin="x4"
    width="0.125rem"
  />
  <Base
    margin="x6"
  >
    <_default
      onAddEmail={[MockFunction]}
    />
  </Base>
  <Base
    margin="x4"
  >
    <_default
      appContacts={Array []}
      onDeleteContact={[MockFunction]}
      onNotificationPreferenceChanged={[MockFunction]}
    />
  </Base>
  <Flex
    alignChildrenHorizontal="end"
    direction="horizontal"
    gap="x4"
    margin="x12"
  >
    <Button
      level="secondary"
      onClick={[MockFunction]}
      size="medium"
      width="8rem"
    >
      Cancel
    </Button>
    <Button
      disabled={true}
      level="primary"
      size="medium"
      width="8rem"
    >
      Save
    </Button>
  </Flex>
</Base>
`;

exports[`NotificationSettings View renders correctly with error message 1`] = `
<Base
  paddingVertical="x8"
>
  <Text
    size="x5"
    weight="bold"
  >
    Email Notifications
  </Text>
  <Divider
    color="gray-2"
    direction="horizontal"
    margin="x4"
    width="0.125rem"
  />
  <Notification
    margin="x4"
    type="alert"
  >
    Something went wrong
  </Notification>
  <Base
    margin="x6"
  >
    <_default
      onAddEmail={[MockFunction]}
    />
  </Base>
  <Base
    margin="x4"
  >
    <_default
      appContacts={Array []}
      onDeleteContact={[MockFunction]}
      onNotificationPreferenceChanged={[MockFunction]}
    />
  </Base>
  <Flex
    alignChildrenHorizontal="end"
    direction="horizontal"
    gap="x4"
    margin="x12"
  >
    <Button
      level="secondary"
      onClick={[MockFunction]}
      size="medium"
      width="8rem"
    >
      Cancel
    </Button>
    <Button
      disabled={true}
      level="primary"
      size="medium"
      width="8rem"
    >
      Save
    </Button>
  </Flex>
</Base>
`;
